--- a/21-10.ipynb
+++ b/21-10.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOI0otbuFBUNrgjuPcIp1G0"
+      "authorship_tag": "ABX9TyOI0otbuFBUNrgjuPcIp1G0",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/gist/phamtantai-hcm/3ec251c21cc789771fd103e2ad1820fd/21-10.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
