--- a/24_10.ipynb
+++ b/24_10.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMJB7CaiL/o/brBEXTQQSBl",
+      "authorship_tag": "ABX9TyP61Vl9UQzb45ernTppILGV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,12 +104,63 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "list1D = [1,2,3]\n",
+        "data = np.array(list1D)\n",
+        "\n",
+        "print(data)\n",
+        "print(data.shape)"
+      ],
       "metadata": {
-        "id": "G1F4CEcnPtW9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G1F4CEcnPtW9",
+        "outputId": "3182926a-360d-446a-ae91-485e5bfaece2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3]\n",
+            "(3,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "list2D = [[1,2,],[3,4],[5,6]]\n",
+        "data = np.array(list2D)\n",
+        "\n",
+        "print(data)\n",
+        "print(data.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dF-wAL2iRxgy",
+        "outputId": "1b6c709c-d8f3-42ea-bc0c-4a910e0fe38c"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2]\n",
+            " [3 4]\n",
+            " [5 6]]\n",
+            "(3, 2)\n"
+          ]
+        }
+      ]
     }
   ]
 }
